beautify faxen.js, fix jumping hover

--- a/i-faxens-tidsalder.css
+++ b/i-faxens-tidsalder.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #212121;
     color: white;
     font-size: 16px;
     font-family: monospace;
@@ -12,6 +12,7 @@ a {
 
 a:hover {
     font-size: 18px;
+    margin: 19px 17px;
 }
 
 .previous {
